log
Thu 21 Mar 2024 06:46:18 PM UTC: 
 tests:  0|5
total_score: 0/70
574699c
Thu 21 Mar 2024 06:56:45 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:22: error: expected expression before ‘int’
   57 |   for (int i =0; i < int get_size(List *L; i++)
      |                      ^~~
exercises.c:64:1: error: expected expression before ‘}’ token
   64 | }
      | ^
exercises.c:64:1: error: expected expression before ‘}’ token
exercises.c:56:7: error: unused variable ‘suma’ [-Werror=unused-variable]
   56 |   int suma = 0;
      |       ^~~~
exercises.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f99b80e
